<resources>
    <string name="app_name">DDWine</string>
    <string name="action_settings">Settings</string>
    <string name="item_wine_name">Wine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">购物车</string>
    <string name="home">首页</string>
    <string name="me">我</string>
    <string name="wealth">财富</string>
    <string name="order">我的订单</string>

    <string name="coin">滴币</string>
    <string name="balance">余额</string>
    <string name="benefit">积分</string>
    <string name="discount">优惠券</string>

    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <!--Home-->
    <!--Detail-->
    <!--Cart-->
    <!--Order-->
    <!--new addr-->
    <string name="new_addr">添加新地址</string>
    <string name="new_addr_name">收货人</string>
    <string name="new_addr_phone">联系电话</string>
    <string name="new_addr_location">所在地区</string>
    <string name="new_addr_street">街道</string>
    <string name="new_addr_default">设为默认</string>
    <string name="enw_addr_choose">请选择</string>
    <!--Me-->
    <!--Vip-->
    <string name="vip">我的会员</string>
    <string name="vip_det">了解等级特权</string>

</resources>
