<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.dd.android.views.activities.NewAddrActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_order_new_addr"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/theme_toolbar"
        app:popupTheme="@style/AppTheme.PopupOverlay" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:text="@string/new_addr"
            android:gravity="center"
            android:textColor="@color/theme_primary"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:divider="@drawable/linearlayoutdivider"
        android:showDividers="middle">

        <!--收货人-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/new_addr_name"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/new_addr_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"/>
        </LinearLayout>

        <!--<View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color" />-->

        <!--联系电话-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/new_addr_phone"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/new_addr_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"/>
        </LinearLayout>

        <!--所在地区-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/new_addr_location"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/new_addr_loc"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/enw_addr_choose"
                android:gravity="right"
                android:drawableRight="@drawable/ic_chevron_right_grey600_24dp"/>

        </LinearLayout>
        <!--街道-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/new_addr_street"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/new_addr_district"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/enw_addr_choose"
                android:gravity="right"
                android:layout_marginLeft="28dp"
                android:drawableRight="@drawable/ic_chevron_right_grey600_24dp"/>

        </LinearLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/divider_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/new_addr_default"
                android:textSize="15sp"/>

            <!--<Switch
                android:id="@+id/new_addr_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"/>-->

            <ToggleButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:button="@drawable/btn_new_addr"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn=""/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/divider_color" />

    </LinearLayout>



</FrameLayout>
